* fixes path recognition that could cause crashes in the filedialog of csg
* fixes bug in song-browser,
  that made next and prev button not work, if you switched to other location with no songs in it.
* hides the songs from System location in songeditor because
    if users would edit them they except that their changes can be saved
* adds russion translation for desktop starter files
* removes psyco import strings (caused crash, if psyco was installed)
* adds russion translation
* marks some strings for translation

Canta 0.2.1 (2011-05-22)

* adds compiled language files for canta, they are needed in cantas current language module
* fixes a bug: canta crashes if you press the quit button after you played a song.

Canta 0.2.0 (2009-12-23)

* song-generator displays the name of the starter-script in the usage-screen now
* starter scripts now start from each prefix (this time I hope really ;) )

Canta 0.2-rc2 (2009-08-17)

* fixes bug with basepath choice button
* starter scripts start now from each prefix not only /usr
* fixes songeditor help
* point to the canta-media 0.2-rc1 version (in git-tree)
* dates in changelog

Canta 0.2-rc1 (2009-07-15)

* small improvements in translation code and translation files
* new config options "Easier tone hitting" and "Allowed difference"
* second lyrics container, now there are first the current and second the next lyrics line
* duration of the song gets displayed behind the position [ pos / duration ]
* improved song result system:
 - passed/hitted points gets collected seperatly
 - points get collected/displayed type specific
 - bonus points count double
 - you get now a school-like score: a+/a/b/c/d/e/f
* remove old pyaudio input code
* improved internal structure in menu-code
* adds directory entry to the songbrowser you can walk now through a directory structure in songs
* refactored microphon input processing and visualisation see commit 1421a6b for more info

Canta 0.2-beta6 (2009-03-08)
